--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,16 @@
         <script type="text/javascript" src="{{url_for('static', filename = 'hello.js')}}"></script>
     </head>
     <body>
-        <input type="button" onclick = "sayHello()" value = "Say Helllo">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul>
+                    {% for message in messages %}
+                    <li>{{message}}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+        <h1> Flask Flash message</h1>
+    <p>Do you want to <a href="{{url_for('login')}}">login?</a></p>
     </body>
 </html>
