--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,6 +1,23 @@
-<!doctype html>
-<html>
-    <body>
-        <h1> Hello {{name}}!</h1>
-    </body>
-</html>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.7/dist/vue.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<div id="app">
+  {{ info }}
+</div>
+
+
+<script>
+<!--import axios from axios-->
+  var app =  new Vue({
+  el: '#app',
+  data () {
+    return {
+      info: null
+    }
+  },
+  mounted () {
+    axios
+      .get('http://localhost:5000/')
+      .then(response => (this.info = response))
+  }
+})
+</script>
